--- a/CSS_2/08-Positions/01-Fixed.html
+++ b/CSS_2/08-Positions/01-Fixed.html
@@ -38,6 +38,58 @@
                     <ul>
                         <li>
                             <span>Login</span>
+                            <div class="dropdown">
+                                <!-- ::before -->
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <div class="row">
+                                                <div class="left">New Customer</div>
+                                                <div class="right">
+                                                    Sign Up
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-circle-user"></i>
+                                            <span>My Profile</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-circle-user"></i>
+                                            <span>Flipkart Plus Zone</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-circle-user"></i>
+                                            <span>Orders</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-heart"></i>
+                                            <span>Wishlist</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-circle-user"></i>
+                                            <span>Rewards</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa-solid fa-circle-user"></i>
+                                            <span>Gift Cards</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <!-- ::after -->
+                            </div>
                         </li>
                         <li>
                             <a href="#">Become a seller</a>
@@ -54,6 +106,68 @@
         </div>
     </div>
 
+    <!-- Main Navigation -->
+    <div id="main-nav">
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
+                        <span>Top Offers</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <span>Grocery</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/22fddf3c7da4c4f4.png?q=100" alt="">
+                        <span>Mobiles</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/c12afc017e6f24cb.png?q=100" alt="">
+                        <span>Fashion</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
+                        <span>Electronics</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/ab7e2b022a4587dd.jpg?q=100" alt="">
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/0ff199d1bd27eb98.png?q=100" alt="">
+                        <span>Appliances</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/71050627a56b4693.png?q=100" alt="">
+                        <span>Travel</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="https://rukminim1.flixcart.com/flap/128/128/image/dff3f7adcf3a90c6.png?q=100" alt="">
+                        <span>Beauty, Toys & More</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Banner -->
     <div id="banner">
         <img src="https://static.vecteezy.com/system/resources/previews/004/299/835/original/online-shopping-on-phone-buy-sell-business-digital-web-banner-application-money-advertising-payment-ecommerce-illustration-search-free-vector.jpg" alt="">
@@ -65,8 +179,119 @@
             <h2>Best in Electronics</h2>
             <div class="product">
                 <a href="#">
+                    <div class="wishlist">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                     <div class="p-img">
                         <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <div class="add-to-cart">
+                            <button>
+                                <i class="fa-solid fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-desc">
+                        <h4>12th Gen Laptop</h4>
+                        <span>From 47,900</span>
+                        <p>High Performance Laptops</p>
+                    </div>
+                </a>
+            </div>
+            <div class="product">
+                <a href="#">
+                    <div class="wishlist">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <div class="p-img">
+                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <div class="add-to-cart">
+                            <button>
+                                <i class="fa-solid fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-desc">
+                        <h4>12th Gen Laptop</h4>
+                        <span>From 47,900</span>
+                        <p>High Performance Laptops</p>
+                    </div>
+                </a>
+            </div>
+            <div class="product">
+                <a href="#">
+                    <div class="wishlist">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <div class="p-img">
+                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <div class="add-to-cart">
+                            <button>
+                                <i class="fa-solid fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-desc">
+                        <h4>12th Gen Laptop</h4>
+                        <span>From 47,900</span>
+                        <p>High Performance Laptops</p>
+                    </div>
+                </a>
+            </div>
+            <div class="product">
+                <a href="#">
+                    <div class="wishlist">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <div class="p-img">
+                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <div class="add-to-cart">
+                            <button>
+                                <i class="fa-solid fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-desc">
+                        <h4>12th Gen Laptop</h4>
+                        <span>From 47,900</span>
+                        <p>High Performance Laptops</p>
+                    </div>
+                </a>
+            </div>
+            <div class="product">
+                <a href="#">
+                    <div class="wishlist">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    <div class="p-img">
+                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <div class="add-to-cart">
+                            <button>
+                                <i class="fa-solid fa-shopping-cart"></i>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                    <div class="p-desc">
+                        <h4>12th Gen Laptop</h4>
+                        <span>From 47,900</span>
+                        <p>High Performance Laptops</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div id="section_2">
+        <div class="container">
+            <h2>Sports, Healthcare & More</h2>
+            <div class="product">
+                <a href="#">
+                    <div class="p-img">
+                        <img src="http://cdn.shopify.com/s/files/1/0057/8938/4802/products/3_6cd803a8-4aa4-48bd-95a7-b11d1f9fdeda.png?v=1655888225" alt="img">
                     </div>
                     <div class="p-desc">
                         <h4>12th Gen Laptop</h4>
@@ -78,7 +303,7 @@
             <div class="product">
                 <a href="#">
                     <div class="p-img">
-                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <img src="http://cdn.shopify.com/s/files/1/0057/8938/4802/products/3_6cd803a8-4aa4-48bd-95a7-b11d1f9fdeda.png?v=1655888225" alt="img">
                     </div>
                     <div class="p-desc">
                         <h4>12th Gen Laptop</h4>
@@ -90,7 +315,7 @@
             <div class="product">
                 <a href="#">
                     <div class="p-img">
-                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <img src="http://cdn.shopify.com/s/files/1/0057/8938/4802/products/3_6cd803a8-4aa4-48bd-95a7-b11d1f9fdeda.png?v=1655888225" alt="img">
                     </div>
                     <div class="p-desc">
                         <h4>12th Gen Laptop</h4>
@@ -102,7 +327,7 @@
             <div class="product">
                 <a href="#">
                     <div class="p-img">
-                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <img src="http://cdn.shopify.com/s/files/1/0057/8938/4802/products/3_6cd803a8-4aa4-48bd-95a7-b11d1f9fdeda.png?v=1655888225" alt="img">
                     </div>
                     <div class="p-desc">
                         <h4>12th Gen Laptop</h4>
@@ -114,7 +339,7 @@
             <div class="product">
                 <a href="#">
                     <div class="p-img">
-                        <img src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg" alt="img">
+                        <img src="http://cdn.shopify.com/s/files/1/0057/8938/4802/products/3_6cd803a8-4aa4-48bd-95a7-b11d1f9fdeda.png?v=1655888225" alt="img">
                     </div>
                     <div class="p-desc">
                         <h4>12th Gen Laptop</h4>
