--- a/CSS_3/BoxModel/ImprovedBox.html
+++ b/CSS_3/BoxModel/ImprovedBox.html
@@ -8,6 +8,10 @@
     <style>
         * {
             box-sizing: border-box;
+            /* Chrome and Safari */
+            -webkit-box-sizing: border-box;
+            /* Mozilla Firefox */
+            -moz-box-sizing: border-box;
         }
         .col {
             display: inline-block;
