--- a/LinkedIn/index.html
+++ b/LinkedIn/index.html
@@ -19,7 +19,7 @@
         <!-- Header -->
         <header id="header">
             <div class="container">
-                <div class="row justify-space-between">
+                <div class="row justify-space-between align-items-center">
                     <div class="col-1">
                         <div class="row">
                             <div class="logo">
@@ -35,11 +35,11 @@
                         </div>
                     </div>
                     <div class="col-2">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <nav id="main-nav">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a class="active" href="#">
                                             <i class="fa-solid fa-house"></i>
                                             <span>Home</span>
                                         </a>
@@ -77,10 +77,10 @@
                                 </ul>
                             </nav>
                             <div class="work">
-                                <ul>
+                                <ul class="align-items-center">
                                     <li>
                                         <a href="#">
-                                            <i class="fa-regular fa-grip-dots"></i>
+                                            <i class="fa-solid fa-list-ul"></i>
                                             <span>Work</span>
                                         </a>
                                     </li>
@@ -96,6 +96,125 @@
                 </div>
             </div>
         </header>
+
+        <!-- Content -->
+
+        <div id="content">
+            <div class="container">
+                <div class="row justify-space-between">
+                    <aside id="sidebar_1">
+                        <div class="widgets">
+                            <div class="widget">
+                                <div class="profile">
+                                    <div class="image-top"></div>
+                                    <a href="#">
+                                        <div class="img">
+                                            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFwP-pXEcbDqg/profile-displayphoto-shrink_100_100/0/1663167949939?e=1668643200&v=beta&t=d1T-Ntdj-3RBloxNDktSdHCUq5h0OLeZ9gOX77Fe21Y" alt="">
+                                        </div>
+                                        <h4>Ravikant Tyagi</h4>
+                                    </a>
+                                    <p>
+                                        Co-Founder at Brain Mentors Pvt Ltd
+                                    </p>
+                                </div>
+                                <div class="connections">
+                                    <a href="#">
+                                        <div class="row justify-space-between">
+                                            <div class="connection-text">
+                                                <p>Connections</p>
+                                                <p class="black-color">Grow your network</p>
+                                            </div>
+                                            <div class="connection-num">
+                                                <i class="fa-solid fa-user-plus"></i>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="try-premium">
+                                    <a href="#">
+                                        <span>Access Exclusive tools & Insights</span>
+                                        <span class="black-color"><i class="fa-solid fa-square"></i> Try Premium for Free</span>
+                                    </a>
+                                </div> 
+                                <div class="my-items">
+                                    <a href="#" class="black-color">
+                                        <i class="fa-solid fa-bookmark"></i>
+                                        <span>My Items</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="widget">
+                                <div class="list">
+                                    <ul>
+                                        <li>
+                                            <a href="#">Groups</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <div class="row justify-space-between">
+                                                    <span>Events</span>
+                                                    <i class="fa-solid fa-plus"></i>
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Followed Hashtags</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="discover">
+                                    <a href="#">Discover More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </aside>
+
+                    <main id="main">
+                        <section id="upload-post">
+                            <div class="row justify-space-evenly">
+                                <div class="img-1">
+                                    <a href="#">
+                                        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFwP-pXEcbDqg/profile-displayphoto-shrink_100_100/0/1663167949939?e=1668643200&v=beta&t=d1T-Ntdj-3RBloxNDktSdHCUq5h0OLeZ9gOX77Fe21Y" alt="img">
+                                    </a>
+                                </div>
+                                <div class="upload-btn">
+                                    <button>Start a post</button>
+                                </div>
+                            </div>
+
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-solid fa-image"></i>
+                                        <span>Photo</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-youtube"></i>
+                                        <span>Video</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-solid fa-calendar-check"></i>
+                                        <span>Event</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-solid fa-newspaper"></i>
+                                        <span>Write Article</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+                    </main>
+
+                    <aside id="sidebar_2"></aside>
+                </div>
+            </div>
+        </div>
 
 
         <!-- Footer -->
