--- a/LinkedIn/index.html
+++ b/LinkedIn/index.html
@@ -37,7 +37,19 @@
                     <div class="col-2">
                         <div class="row align-items-center">
                             <nav id="main-nav">
+                                <input type="checkbox" value="toggle-menu">
+                                <button class="menu-btn">
+                                    <span class="line"></span>
+                                    <span class="line"></span>
+                                    <span class="line"></span>
+                                </button>
                                 <ul>
+                                    <li class="search-tab">
+                                        <a href="#">
+                                            <i class="fa-solid fa-search"></i>
+                                            <span>Search</span>
+                                        </a>
+                                    </li>
                                     <li>
                                         <a class="active" href="#">
                                             <i class="fa-solid fa-house"></i>
