--- a/SASS_Examples/index.html
+++ b/SASS_Examples/index.html
@@ -9,12 +9,58 @@
 </head>
 <body>
 
-    <h1>This is SASS Demo...</h1>
+    <header>
+        <h1>This is SASS Demo...</h1>
+    </header>
+    
+    <nav id="main-nav">
+        <ul>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Men</a>
+            </li>
+            <li>
+                <a href="#">Women</a>
+            </li>
+            <li>
+                <a href="#">Sports</a>
+            </li>
+            <li>
+                <a href="#">More</a>
+            </li>
+        </ul>
+    </nav>
+
+    <ul>
+        <li>This is item_1</li>
+        <li>This is item_2</li>
+        <li>This is item_3</li>
+        <li>This is item_4</li>
+        <li>This is item_5</li>
+        <li>This is item_6</li>
+        <li>This is item_7</li>
+        <li>This is item_8</li>
+        <li>This is item_9</li>
+        <li>This is item_10</li>
+        <li>This is item_11</li>
+        <li>This is item_12</li>
+        <li>This is item_13</li>
+        <li>This is item_14</li>
+        <li>This is item_15</li>
+    </ul>
 
     <div class="alert">
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sit adipisci nemo corrupti libero expedita unde laudantium cumque eum tenetur ut, non distinctio culpa. 
             <span>Cupiditate quae facilis ad quasi atque?</span>
+        </p>
+    </div>
+
+    <div class="show">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, commodi sapiente totam similique in quos repellat suscipit! Suscipit voluptate reiciendis mollitia. Animi deleniti ipsum blanditiis eos beatae minima suscipit consectetur?
         </p>
     </div>
     
